--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
+    <head>
+        <link rel="stylesheet" href="style.css">
+    </head>
     <body>
-        <h1>eric's website</h1>
+        <header>
+            <h1>eric's website</h1>
+        </header>
+        <a href="writing/writing.html">writing pieces</a>
         <a href="games.html">Games</a>
     </body>
 </html>
