created about me

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         </header>
         <a href="writing/writing.html">writing pieces</a>
         <a href="games.html">Games</a>
+        <a href="aboutMe.html">About Me</a>
     </body>
 </html>
